--- a/blogs/getting_selected_in_outreachy.html
+++ b/blogs/getting_selected_in_outreachy.html
@@ -97,7 +97,7 @@
 
                     <p>I got to know about the Outreachy Program in December 2017 from a couple of friends from college who were selected during that round. I was in my first year of college and I had an urge to do something with all the free time I had. So I learned about Outreachy and when the applications opened for Summer 2017 I decided to give it a shot but couldn't make it in my first attempt. I had a very little experience of setting development environment and had a really hard time doing so. The key takeaway was the experience about creating proposals and applying for remote internship programs.</p>
 
-                    <p>However, I kept contributing to open source projects since then. I have been an active contributor in Mozilla’s firefox account and so this year, when the application process started, I was better prepared and also had an year of experience of contributing in the project.When the projects list was announced I was glad that the project I was contributing to, was also in the list. Despite of having enough contributions till then, I kept on contributing more and more in the project even after the application period.</p>
+                    <p>However, I kept contributing to open source projects since then. I have been an active contributor in Mozilla’s firefox account and so this year, when the application process started, I was better prepared and also had an year of experience of contributing in the project. When the projects list was announced I was glad that the project I was contributing to, was also in the list. Despite of having enough contributions till then, I kept on contributing more and more to the project even after the application period.</p>
 
                     <p>The results were announced on 6th of May and I got selected. It was really worth of all the efforts I made. I am excited to work on the project and am looking forward to learn a lot of new things as part of my internship program.</p>
 
@@ -107,15 +107,15 @@
 
                     <p>Once you select a project, join the mailing lists, IRC or Slack channels, used by the organisation. Don’t forget to go through the contribution guidelines before making the first contribution. Some organizations have some specific commit guidelines and expects you to follow the same. </p>
 
-                    <p>Never lose your motivation. Keep contributing to the project, ask questions, try to solve issue. It is okay if you don’t get it correct at first attempt ,  you would get reviews and you can make it in the 2nd or 3rd or 4th attempt. In the end, learning matters   not the number of times you made mistakes.</p>
+                    <p>Never lose your motivation. Keep contributing to the project, ask questions, try to solve issues. It is okay if you don’t get it correct at first attempt, you would get reviews and you can make it in the 2nd or 3rd or 4th attempt. In the end, learning matters not the number of times you made mistakes.</p>
 
-                    <p>Don’t feel too accomplished after making one or two contributions. Try to solve as many issues as you can. Keep contributing even after the deadline until you get the results. This helped me a lot. It made my mentors realized that I’m a learner, enthusiast, and an active participant and they always appreciated it. So I recommend to keep contributing.</p>
+                    <p>Don’t feel too accomplished after making one or two contributions. Try to solve as many issues as you can. Keep contributing even after the deadline until you get the results. This helped me a lot. It made my mentors realized that I am interested in the project. So I recommend to keep contributing.</p>
 
                     <p>Start as early as possible. Subscribe the project’s repository. If you start early you will have a lot of unassigned good first bugs bugs which can be solved easily. It would give a good chance to understand the project and solve the most issues.</p>
 
                     <p>Be in touch with your project mentor and the community. Don’t let them forget you. Contribute regularly, solve bugs, and ask (valid) questions.</p>
 
-                    <p>Outreachy application requires you to fill some of the questions asking about the experience of working with open source organizations, the timeline that you would follow in the internship period etc. Prepare answer to these questions well in advance. You can also get it reviewed by the project mentor before submitting the final application.</p>
+                    <p>Outreachy application requires you to answer some of the questions asking about the experience of working with open source organizations, the timeline that you would follow in the internship period, etc. Prepare answers to these questions well in advance. You can also get it reviewed by the project mentor before submitting the final application.</p>
 
                     <p>At last: <blockquote>You either win or you learn.</blockquote>Forget about the outcome. You will get some highly skilled developers ready to mentor you and a start to opensource journey. </p>
 
