--- a/blogs/getting_selected_in_outreachy.html
+++ b/blogs/getting_selected_in_outreachy.html
@@ -111,7 +111,7 @@
 
                     <p>Don’t feel too accomplished after making one or two contributions. Try to solve as many issues as you can. Keep contributing even after the deadline until you get the results. This helped me a lot. It made my mentors realized that I am interested in the project. So I recommend to keep contributing.</p>
 
-                    <p>Start as early as possible. Subscribe the project’s repository. If you start early you will have a lot of unassigned good first bugs bugs which can be solved easily. It would give a good chance to understand the project and solve the most issues.</p>
+                    <p>Start as early as possible. Subscribe to the project’s repository and keep a watch on all the new issues. If you start early you will have a lot of unassigned good first bugs which can be solved easily. It would give a good chance to understand the project and solve many issues.</p>
 
                     <p>Be in touch with your project mentor and the community. Don’t let them forget you. Contribute regularly, solve bugs, and ask (valid) questions.</p>
 
